k8s/deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-quiz-deployment
  namespace: quiz
  labels:
    app: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        environment: production
        app: quiz
    spec:
      containers:
      - name: quiz
        image: registry.gitlab.com/dobicinaitis/quiz:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: gitlab-registry
