k8s/service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-quiz-service
  namespace: quiz
spec:
  selector:
    environment: production
    app: quiz
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
