k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  namespace: quiz
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: luminor.dev
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - sh.luminor.dev
    secretName: letsencrypt-prod
  rules:
  - host: sh.luminor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: production-quiz-service
            port: 
              number: 80
